# Learning-Computation-with-Chenggong

./: .gitignore  README.md
1-MD_tutorial/1-1-GMX_installation/: README.md  cmake_GMX2021.2-CPU.sh  cmake_GMX2021.2.sh  cmake_GMX2021.3_CPU_double.sh  cmake_GMX2021.3_cuda.sh  cmake_GMX2022.4-CPU.sh  downloadGMX.sh
1-MD_tutorial/1-2-Amber_installation/: README.md
1-MD_tutorial/1-3-force_field_bond_parameter/: README.md  bond_param.ipynb  methane.top  nvt.mdp
1-MD_tutorial/1-4-force_field_non_bond/: README.md  methane.gro  methane.top
1-MD_tutorial/1-5-Antechamber-GAFF-non-standard-residue-prepare/: README.md  jz4.gjf  jz4.mol2  jz4_pymol.mol2  test.prmtop  test.rst7
1-MD_tutorial/1-6-Amber-protein-GAFF-ligand/: README.md
1-MD_tutorial/1-6-Amber-protein-GAFF-ligand/1-em/: minim-FC-500.mdp  minim-NoRes.mdp
1-MD_tutorial/1-6-Amber-protein-GAFF-ligand/2-nvt/: nvt.mdp
CC_news_008_ddG_uniFEP/: README.md
CC_news_009/: README.md
CC_news_011_replica_exchange/: Langevin.py  Langevin_test.py  README.md  test_dstribution.py
CC_news_011_replica_exchange/traj02/: run_all.sh
CC_news_013_mdanalysis/: README.md  plot.ipynb
CC_news_013_mdanalysis/data/: index_CYS159-CYS284_PRO155-GLY280.ndx
CC_news_013_mdanalysis/speed_test_distance/: run_all.sh
CC_news_013_mdanalysis/speed_test_distance/05-GMXLIB_CPP/: CMakeLists.txt  distance.cpp
CC_news_014_alchemical_pKa_calculation_and_error_cancellation/: README.md
Chemshell/Py-chemshell-installation/: README.md
YuMuhan_Open_Course/: README.md
YuMuhan_Open_Course/MM-potential/: potential.ipynb
(+112 files in other folders)
